# tailored-job-application

./: .gitignore  README.md  render.yaml
backend/: pyproject.toml
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/routers/: analyze.py
backend/app/services/: fetcher.py  llm.py  parser.py
docs/: spec.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/InputForm/: InputForm.tsx
frontend/src/components/ResultTabs/: ResultTabs.tsx
